# commitcraft

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
commitcraft/: cli.py
commitcraft/analysis/: classifier.py  filters.py  grouper.py  rule_engine.py
commitcraft/config/: models.py  store.py  wizard.py
commitcraft/context/: builder.py
commitcraft/generators/: commit.py  pr.py  release_notes.py
commitcraft/git/: diff_parser.py  history.py
commitcraft/providers/: anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py  openai_provider.py
commitcraft/utils/: parser.py  token_estimator.py
docs/: adding_a_provider.md
tests/: test_classifier.py  test_cli.py  test_commit_generator.py  test_config_store.py  test_context_builder.py  test_diff_parser.py  test_filters.py  test_generators.py  test_grouper.py  test_history.py  test_providers.py  test_providers_extra.py  test_rule_engine.py
tests/fixtures/: complex_multi_file.diff  lockfile_only.diff  simple_readme.diff
