[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commitcraft-cli"
version = "0.2.0"
description = "Smart conventional commit messages with a rule engine + minimal-context LLM"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "google-generativeai>=0.7.0",
]

[project.scripts]
commitcraft = "commitcraft.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["commitcraft"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
